<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="LabelStart">Start?</string>
    <string name="app_name">MyInfo</string>
    <string name="LabelYes">Yes</string>
    <string name="LabelNo">No</string>
    <string name="LabelAll">All</string>
    <string name="ChargerConnected">Power</string>
    <string name="LastWarning">Last Warning</string>
    <string name="PoiId">Poi Id</string>
    <string name="Longitude">Longitude</string>
    <string name="Latitude">Latitude</string>
    <string name="Altitude">Altitude</string>
    <string name="Accuracy">Accuracy</string>
    <string name="UpdateTime">UpdateTime</string>
    <string name="Plugged">Plugged</string>
    <string name="Unplugged">Unplugged</string>
    <string name="AC_On">AC on</string>
    <string name="AC_Off">AC off</string>
    <string name="Convert">Convert</string>
    <string name="Distance">Distance</string>
    <string name="Direction">Direction</string>
    <string name="Type">Type</string>
    <string name="Save">Save</string>
    <string name="Load">Load</string>
    <string name="Speed">Speed</string>
    <string name="Debugmode">Debugmode</string>
    <string name="UseDatabase">Use Database</string>
    <string name="Exit">Exit</string>    
    <string name="Resize">Resize</string>
    <string name="TestSound">TestSound</string>
    <string name="WarningSecs">WarningSecs</string>
    <string name="RejectPassed">Reject Passed</string>
    <string name="Unknown">Unknown</string>
    <string name="location">Location</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Save</string>
    <string name="no_data">No Data</string>
    <color name="gray">#ffff0000</color>
    <string name="err">Error</string>
    <string name="RecordPoints">RecordPoints</string>
    <string name="Export">Export</string>
    <string name="About">About&#8230;</string>
    <string name="HistoryDays">History Days</string>
    <string name="ResizeDistance">ResizeDistance</string>
    <string name="NrPoi">Nr</string>
    

</resources>